<resources>
    <string name="app_name">Gomi</string>.
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Name</string>
    <string name="phone_no">Phone No</string>
    <string name="item_name">Item Name</string>
    <string name="item_type">Item Type</string>
    <string name="contact_form_button">Send Message</string>
    <string name="from_gallary">Gallary</string>
    <string name="from_camera">Camera</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="create">Create</string>
    <string name="send">Send</string>
    <string name="confrim">confirm</string>
    <string name="location">Location</string>
    <string-array name="names">
        <item>[Select One]</item>>
        <item>Iorn Materials</item>
        <item>Empty Bottles</item>
        <item>Papers</item>
        <item>Other</item>

    </string-array>
    <string name="image">Image</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="appbar_scrolling_view_behavior">kkkkkk</string>
    <string name="title_activity_seller_map">Map</string>
    <string name="save_details"> Post Ad.</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="dump_waste">Dump Waste</string>
    <string name="start_journey">Start Journey</string>
    <string name="cancel_bookig">Cancel Booking</string>
    <string name="start_buyier_journey">Start Journey</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="pick_up_waste">Pick Up waste</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="title_activity_buyier_map">Map</string>
    <string name="title_activity_my_ads_map">Map</string>

    <!--ad cancel pop up-->
    <string name="adCancelPoppHeader">Booking Canceled!</string>
    <string name="adCancelPoppContent">Your Advertisement Booking Canceled..</string>

    <!---waste picked popup-->
    <string name="wastePickPoppHeader">Waste Picked!</string>
    <string name="wastePickPoppContent">Your Waste Picked By Truck..</string>

    <!---Delete ad Confirmation popup-->
    <string name="deleteAdConfirmationPoppHeader">Are You Sure!</string>
    <string name="deleteAdConfirmationPoppContent">You want to Remove this Adverisment?</string>
    <string name="title_activity_admin_map">Map</string>
</resources>
