<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PostAdActivity"
    android:background="@drawable/gradient"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/gradient"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/contact_form_name"
                android:textAllCaps="true"
                android:textColor="@color/formColor"
                android:textSize="20sp" />

            <EditText

                android:id="@+id/your_name"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="20sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/phone_no"
                android:textAllCaps="true"
                android:textColor="@color/formColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone_no"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="20sp" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/item_name"
                android:textAllCaps="true"
                android:textColor="@color/formColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/item_name"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="20sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:paddingLeft="3dp"
                android:text="@string/item_type"
                android:textAllCaps="true"
                android:textColor="@color/formColor"
                android:textSize="20sp" />


            <Spinner
                android:id="@+id/item_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/price"
                android:textAllCaps="true"
                android:textColor="@color/formColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/price"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="20sp" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/image"
                android:textAllCaps="true"
                android:textColor="@color/formColor"
                android:textSize="20sp" />


            <ImageView
                android:id="@+id/iamge"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/twitter"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/from_gallary"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:paddingBottom="1dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="1dp"
                    android:text="@string/from_gallary"
                    android:textAllCaps="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"/>
                  <Button
                    android:id="@+id/from_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:paddingBottom="1dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="1dp"
                    android:text="@string/from_camera"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
            <Button
                android:id="@+id/see_location"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:paddingBottom="1dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="1dp"
                android:text="@string/location"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/loc_latitude"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/loc_longitude"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="20sp" />


            <Button
                android:id="@+id/save_details"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:paddingBottom="1dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="1dp"
                android:text="@string/save_details"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp"/>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
